--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -87,7 +87,7 @@ The schedule for the different curricula are listed here:
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>
         <td>
@@ -102,7 +102,7 @@ The schedule for the different curricula are listed here:
       </tr>
       <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
       <tr>
- <tr> <td>Late afternoon</td>
+	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
